--- a/My Web Sites/design.css
+++ b/My Web Sites/design.css
@@ -9,7 +9,12 @@ h1{
     font-size: 350%;
     color: rgb(211, 137, 192);
 }
-
+img
+{
+    border: 10px solid rgb(144, 235, 236);
+    width: 30%;
+    height: 20%;
+}
 h2{
     text-align: center;
     font-style: normal;
