--- a/My Web Sites/design.css
+++ b/My Web Sites/design.css
@@ -2,7 +2,11 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         background-color: rgb(250, 250, 253)
 }
-
+body {
+    background-image: url('https://scx1.b-cdn.net/csz/news/800/2017/theoreticala.jpg');
+    background-repeat: no-repeat;
+    color: #FFFFFF;
+}
 h1{
     text-align: center;
     font-style: normal ;
