--- a/My Web Sites/design.css
+++ b/My Web Sites/design.css
@@ -1,8 +1,6 @@
 *{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        background-image: url('https://scx1.b-cdn.net/csz/news/800/2017/theoreticala.jpg');
-    background-repeat: no-repeat;
-    color: #FFFFFF;
+        background-color: rgb(250, 250, 253)
 }
 h1{
     text-align: center;
