--- a/My Web Sites/design.css
+++ b/My Web Sites/design.css
@@ -6,7 +6,7 @@ h1{
     text-align: center;
     font-style: normal ;
     font-size: 350%;
-    color: rgb(51, 26, 0);
+    color: rgb(0, 153, 51);
 }
 img
 {
@@ -43,7 +43,7 @@ h5{
 marquee{
     border-radius: 90px;
     background: rgb(128, 62, 0);
-    color: rgb(184, 5, 115);
+    color: white;
  font-size: 25px;
  font-style: italic;
 }
@@ -60,7 +60,7 @@ div.center{
     text-align: center;
 }
 #hobby-list{
-    background-color: white;
+    background-color: rgb(249, 242, 236);
 }
 #I1{
     text-align: center;
